Automatizando os stats do pokémon pela API

--- a/pokemon/templates/index.html
+++ b/pokemon/templates/index.html
@@ -61,7 +61,7 @@
                   <li>Sp.Atk: {{ primeiro_pokemon.ataque_especial }}</li>
                   <li>Sp.Def: {{ primeiro_pokemon.defesa_especial }}</li>
                   <li>Velocidade: {{ primeiro_pokemon.velocidade }}</li>
-                  <li>Total: </li>
+                  <li>Total: {{ primeiro_pokemon.total }}</li>
                 </ul>
               </div>
 
@@ -108,7 +108,7 @@
                   <li>Sp.Atk: {{ pokemon.ataque_especial }}</li>
                   <li>Sp.Def: {{ pokemon.defesa_especial }}</li>
                   <li>Velocidade: {{ pokemon.velocidade }}</li>
-                  <li>Total: </li>
+                  <li>Total: {{ pokemon.total }}</li>
                 </ul>
               </div>
 
