--- a/pokemon/templates/index.html
+++ b/pokemon/templates/index.html
@@ -16,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
 
-    <title>Pokédex - MapaDev Week</title>
+    <title>Pokédex</title>
   </head>
 
  
@@ -27,7 +27,7 @@
     </div>
     <main class="back">
 
-      {% if lista_pokemon %}
+      {% if primeiro_pokemon %}
       
       <div class="pokedex">
         
