Alterando os links úteis

--- a/pokemon/templates/index.html
+++ b/pokemon/templates/index.html
@@ -153,11 +153,8 @@
       <h2 class="texto-sem-pokemons">Não há pokémon adicionados.</h2>
       {% endif %}
 
-      <a href="https://www.linkedin.com/in/wesleyrioos/" target="_blank">
-        <img src="{% static 'src/imagens-style/LinkedIn-símbolo.jpg' %}" alt="" class="linkedin-logo">
-      </a>
 
-      <a href="https://github.com/Zarps" target="_blank">
+      <a href="https://github.com/Maxceleste/pkmteam" target="_blank">
         <img src="{% static 'src/imagens-style/github-logo.png' %}" alt="" class="github-logo">
       </a>
     </main>
